...
    <string name="confirm">Confirm</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_your_alarm_to_leave_this_screen">Dismiss your alarm to leave this screen</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="every_day">Every Day</string>
    <string name="fab_button">Fab Button</string>
    <string name="fast">Fast</string>
    <string name="fifteen_minutes">15 Minutes</string>
    <string name="five_minutes">5 Minutes</string>
    <string name="general">General</string>
...
    <string name="permission_needed">Permission Needed</string>
    <string name="popup_menu_button">Popup Menu Button</string>
    <string name="preview">Preview</string>
    <string name="preview_of_alarm_cancelled">Preview of alarm cancelled</string>
    <string name="removed_format">Removed: %s</string>
    <string name="save">Save</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="settings">Settings</string>
    <string name="slow">Slow</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_length">Snooze Length</string>
    <string name="sound">Sound</string>
    <string name="ten_minutes">10 Minutes</string>
...
    <string name="vibration">Vibration</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekend">Weekend</string>

    <!--App-->

    <string name="app_name" translatable="false">@string/alarm_clock</string>

    <string name="app_time_hours_minutes_format" translatable="false">%02d:%02d</string>

    <string name="app_vibration_type_none" translatable="false">@string/none</string>
    <string name="app_vibration_type_slow" translatable="false">@string/slow</string>
    <string name="app_vibration_type_normal" translatable="false">@string/normal</string>
    <string name="app_vibration_type_fast" translatable="false">@string/fast</string>

    <string name="navigation_main_alarm_editor_fragment_label" translatable="false">@string/set_alarm</string>
    <string name="navigation_main_alarm_list_fragment_label" translatable="false">@string/alarm_clock</string>
    <string name="navigation_main_settings_fragment_label" translatable="false">@string/settings</string>

    <!--AlarmEditor-->

    <string name="alarm_editor_dialog_name_negative_button" translatable="false">@string/cancel</string>
    <string name="alarm_editor_dialog_name_positive_button" translatable="false">@string/confirm</string>
    <string name="alarm_editor_dialog_name_title" translatable="false">@string/alarm_name</string>
...
