...
            name="alarmOnItemClickListener"
            type="de.niklasbednarczyk.alarmclock.ui.alarm.alarmlist.AlarmListAdapter.AlarmOnItemClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:id="@+id/alarm_list_item_card_view"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_layout_small"
        android:layout_marginEnd="@dimen/margin_layout_small"
        android:layout_marginStart="@dimen/margin_layout_small"
        android:layout_width="match_parent"
        android:onClick="@{() -> alarmOnItemClickListener.onCardViewClick(alarm.alarmId)}">
...
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/alarm_list_item_is_active"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="@{() -> alarmOnItemClickListener.onActiveClick(alarm)}"
                app:alarmIsActive="@{alarm}"
                app:layout_constraintBottom_toBottomOf="@id/alarm_list_item_pop_up_menu"
                app:layout_constraintEnd_toStartOf="@id/alarm_list_item_pop_up_menu"
                app:layout_constraintStart_toEndOf="@id/alarm_list_item_time"
                app:layout_constraintTop_toTopOf="@id/alarm_list_item_pop_up_menu" />

            <ImageButton
                android:background="?android:selectableItemBackground"
...
